# book-club

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  docker-compose.yaml  index.html  package.json  pyproject.toml  tsconfig.app.json
app/: settings.py  urls.py
app/book_clubs/: admin.py  apps.py  models.py  serializers.py  views.py
app/book_clubs/migrations/: 0001_initial.py
app/book_clubs/reading/: admin.py  apps.py  models.py
app/book_clubs/reading/migrations/: 0001_initial.py
app/book_clubs/reading_goal/: admin.py  apps.py  models.py
app/book_clubs/reading_goal/migrations/: 0001_initial.py
app/books/: admin.py  models.py
app/books/migrations/: 0001_initial.py  0002_alter_bookauthor_last_name.py
app/frontend/: App.tsx
app/users/: serializers.py  views.py
infra/: nginx.conf
